# kyma-widget-intelligence

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: index.html
examples/: filtered_widget_conversion.rs
src/: kyma_extractor.rs  lib.rs  persistence.rs  similarity_engine.rs  tauri_examples.rs
tests/: event_id_suggestions_test.rs  kyma_extractor_tests.rs  persistence_tests.rs  similarity_engine_tests.rs  simplified_use_case_test.rs  tauri_examples_tests.rs
