[package]
name = "widget_intelligence"
version = "0.1.3"
edition = "2021"
description = "A Rust library for intelligent Kyma widget suggestion and learning"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cristianvogel/widget_intelligence"
keywords = ["widgets", "machine-learning", "suggestions",  "library", "kyma"]
categories = ["algorithms", "data-structures"]
readme ="README.md"

exclude = [
    "/.idea/*",
    "/.claude/*",
    ".gitignore"
]


[dependencies]
# Serde kept temporarily for Tauri JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11.1"
sled = "0.34"
# Using bincode 2.0 with derived feature for native Encode/Decode traits
bincode = { version = "2.0.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "filtered_widget_conversion"
path = "examples/filtered_widget_conversion.rs"